--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html class="bg-[#0d1c1a] min-h-full min-w-full text-white font-serif">
+<html class="bg-[#0b1715] min-h-full min-w-full text-white font-serif">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,54 +8,156 @@
     <!-- TODO: INCLUDE FAVICON -->
     <!-- <link rel="shortcut icon" href="images/favicon.ico?t=1685053341290"> -->
 
+    <!-- Styles -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="./css/main.css">
   </head>
 
-  <body>
-    <div class="flex justify-center flex-col items-center mb-8">
-      <img src="./images/vittoria-logo.png" />
-      <h2 class="-mt-8 text-2xl">Games by Nick Francisci</h2>
+  <body class="cormorant">
+    <div class="flex justify-center flex-col items-center mb-8 px-2">
+      <h1><img src="./images/vittoria-logo.png" /></h1>
+      <h2 class="-mt-16 text-2xl">Games by Nick Francisci</h2>
     </div>
 
-    <main class="mt-12 max-w-screen-lg mx-auto">
-      <section>
-        <div class="flex justify-between border-b-2 border-white items-end">
-          <h3 class="text-4xl">FORUM MORTUORUM</h3>
-          <span class="text-lg">CURRENT WORK</span>
+    <main class="mt-12 max-w-screen-lg px-2 mx-auto">
+      <hr class="border-t-2" />
+      <section class="border-t-2 mt-2 pt-2 mb-8 px-1 md:px-3 md:mx-0">
+        <div class="flex justify-between border-white gap-4 items-start text-white">
+          <h2 class="text-4xl">FORUM MORTUORUM</h2>
+          <span class="text-sm text-right">CURRENT WORK</span>
         </div>
 
-        <p class="mt-2">Your gladiator school awaits you. Decide whom to hire and whom to fight. Equip and train your gladiators. Set your tactics and throw your team into the arena for fame and profit. Advance through the leagues, conquer great foes, and emblazon your name upon history.</p>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6 font-light text-sm baskerville" >
+          <div class="col-1">
+            <h3 class="text-xl mt-2 mb-3 text-slate-200">Gladiator Management</h3>
 
-        <!-- TODO: STYLE (AND TEXT) -->
-        <ul>
-          <li><a href="https://store.steampowered.com/app/2368530/Forum_Mortuorum/">Steam</a><li>
-          <li><a href="./presskit/forum-mortuorum/index.html">Presskit</a></li>
-        </ul>
+            <p class="mt-2" >Your gladiator school awaits you. Decide whom to hire and whom to fight. Equip and train your gladiators. Set your tactics and throw your team into the arena for fame and profit. Advance through the leagues, conquer great foes, and emblazon your name upon history.</p>
+
+            <ul class="mt-6 text-white">
+              <li><a class="text-lg mt-4 link" href="https://store.steampowered.com/app/2368530/Forum_Mortuorum/">On Steam</a><li>
+              <li><a class="text-lg mt-4 link" href="./presskit/forum-mortuorum/index.html">Press Kit</a></li>
+            </ul>
+          </div>
+
+          <div class="col-2">
+            <img class="mb-4" src="./images/fm-combat.gif">
+            <img src="./images/fm-schola.gif">
+          </div>
+        </div>
       </section>
 
-      <!-- TODO: MECH-ANIC -->
-
-      <!-- TODO: EREBUS? -->
-
-      <section class="mt-12">
-        <div class="flex justify-between border-b-2 border-white items-end">
-          <h3 class="text-4xl">PROTOTYPE: APOLLO</h3>
-          <span class="text-lg">INDEFINITE HOLD</span>
+      <section class="border-t-2 mt-2 pt-2 mb-8 px-1 md:px-3 md:mx-0">
+        <div class="flex justify-between border-white gap-4 items-start text-white">
+          <h2 class="text-4xl">APOLLO</h2>
+          <span class="text-sm text-right">PROTOTYPE / ON HOLD</span>
         </div>
-        <!-- TODO: REVISE -->
-        <p class="mt-2">A group of 2-8 players step into the role of officers aboard a customizable aerial warship in the 1960s. As freedom fighters in their occupied homeland, they crew a privateer, opportunistically targeting enemy warships at their discretion, plotting the hunt, chasing their quarry and engaging it in blazing real-time combat.</p>
 
-        <p class="mt-2">Within combat, officers fill the roles required by their ship’s design. At a minimum this includes the helm and primary battery. However, as the ship evolves and the war pushes new technologies forward, this will grow to include away-team boarding marines, combat aircraft squadrons, signals intelligence, ship damage control, and control of support airships. Every showdown will feel like a unique boss-fight, evolving over 25 - 45 minutes with the crew’s flexibility, discipline, and good decision-making matter more than placing a few accurate salvos.</p>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6 font-light text-sm baskerville" >
+          <div class="col-1">
+            <h3 class="text-xl mt-2 mb-3 text-slate-200">Co-op Dieselpunk Airship Command</h3>
 
-        <p class="mt-2">Should they succeed, the salvage and loot (or commission) for their victory allows them to up-arm their ship to hunt yet larger quarries in their quest to liberate their homeland.</p>
+            <p class="mt-2">Step into the role of specialized officers aboard an aerial warship in an alternate 1960s. As freedom fighters in your occupied homeland, crew a privateer, opportunistically targeting enemy warships at your discretion. Plot the hunt, chase your quarry and engage it in blazing real-time combat.</p>
+
+            <ul class="mt-6 text-white">
+              <li><a class="text-lg mt-4 link" href="https://www.youtube.com/watch?v=_cd3CLoxES8">Prototype Gameplay Footage</a><li>
+            </ul>
+          </div>
+
+          <div class="col-2">
+            <img class="mb-4" src="./images/apollo-thrusters.png">
+            <img src="./images/apollo-hits.png">
+            <!-- <img src="./images/apollo-sketch.jpg"> -->
+          </div>
+        </div>
       </section>
 
       <!-- TODO: PORKCHOPOLIS -->
+      <section class="border-t-2 mt-2 pt-2 mb-8 px-1 md:px-3 md:mx-0">
+        <div class="flex justify-between border-white gap-4 items-start text-white">
+          <h2 class="text-4xl">PORKCHOPOLIS</h2>
+          <span class="text-sm text-right">PROTOTYPE / ON HOLD</span>
+        </div>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6 font-light text-sm baskerville" >
+          <div class="col-1">
+            <h3 class="text-xl mt-2 mb-3 text-slate-200">Co-op Steppe City-Builder</h3>
+            <p class="mt-2">Cooperate with your friends to rule a budding city-state on the periphery of the Steppe. Split governance among yourselves as a foreign-minister, city-planner, and economic minister, each with unique and complementary abilities. Also, all your subjects are goats!</p>
+
+            <ul class="mt-6 text-white">
+              <li><a class="text-lg mt-4 link" href="https://www.youtube.com/watch?v=LzQ7F02TOCI&list=PLav9fuRfyF8APMDiPuyRviUD1lkBpY56U&index=6">Early Feature Demos</a><li>
+            </ul>
+          </div>
+
+          <div class="col-2 flex justify-end">
+            <img class="mb-4 h-72" src="./images/pchp-doatzo.png">
+          </div>
+        </div>
+      </section>
+
+      <!-- TODO: MECH-ANIC -->
+      <!-- TODO: EREBUS -->
     </main>
 
-    <footer class="bg-[#fff6d9] min-w-full h-24 mt-12">
-      <!-- TODO: Mailing List, Press kit, Steam Twitter, Copyright -->
+    <footer class="bg-[#fff6d9] min-w-full mt-12 pb-4 text-[#0b1715]">
+      <div class="max-w-screen-lg mx-auto py-2 flex flex-col">
+        <div class="mailchimp-signup self-center">
+          <!-- Begin Mailchimp Signup Form -->
+          <div id="mc_embed_signup">
+            <form action="https://gmail.us9.list-manage.com/subscribe/post?u=d098d9289a6dd86ccd69c5386&amp;id=58d170f741&amp;f_id=00b939e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+
+              <div id="mc_embed_signup_scroll" class="flex items-baseline gap-2 mt-4">
+
+                <div>
+                  <h4 class="text-2xl font-bold text-slate-900">Newsletter</h4>
+                  <!-- <small class="baskerville text-xs">Only game updates</small> -->
+                </div>
+
+                <div class="mc-field-group ml-4">
+                  <label for="mce-EMAIL" class="baskerville font-medium mr-1 hidden">Email</label>
+                  <input type="email" value="" name="EMAIL" placeholder="Email" class="required email  baskerville px-2 pt-1 pb-0.5 text-sm border-0 border-b" id="mce-EMAIL" required>
+                  <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+                </div>
+
+                <div hidden="true"><input type="hidden" name="tags" value="12771878"></div>
+
+                <div id="mce-responses" class="clear foot">
+                  <div class="response" id="mce-error-response" style="display:none"></div>
+                  <div class="response" id="mce-success-response" style="display:none"></div>
+                </div>
+
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                  <input type="text" name="b_d098d9289a6dd86ccd69c5386_58d170f741" tabindex="-1" value="">
+                </div>
+
+                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="cursor-pointer border rounded baskerville button text-sm px-4 py-1 bg-[#0b1715] text-white">
+              </div>
+            </form>
+          </div>
+
+          <!--End Mailchimp signup form-->
+
+          <!-- TODO: Mailing List, Press kit, Steam, Twitter, Copyright -->
+        </div>
+
+        <!-- Social Links -->
+        <div class="flex items-baseline gap-8 self-center justify-self-auto mt-2">
+          <!-- <h4 class="text-2xl font-bold text-slate-900 inline">Links</h4> -->
+          <ul class="flex text-sm gap-8 w-full baskerville font-semibold">
+            <li><a class="link" href="./presskit/index.html">Press Kit</a></li>
+            <li><a class="link" href="https://store.steampowered.com/curator/44138548">Steam</a></li>
+            <li><a class="link" href="https://twitter.com/vittoriagames">Twitter</a></li>
+            <li><a class="link" href="https://www.youtube.com/channel/UCLkS8mSATQ3ahVtB1ltNHgA">Youtube</a></li>
+            <li><a class="link" href="mailto:vittoriagamestudio@gmail.com">Contact</a></li>
+          </ul>
+        </div>
+      </div>
     </footer>
 
   </body>
+
+  <!-- Mailchimp Script -->
+  <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+  <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);
+  </script>
 </html>
