Add a desultory favicon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Vittoria Games</title>
 
     <!-- TODO: INCLUDE FAVICON -->
-    <!-- <link rel="shortcut icon" href="images/favicon.ico?t=1685053341290"> -->
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 
     <!-- Styles -->
     <script src="https://cdn.tailwindcss.com"></script>
