--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </ul>
           </div>
 
-          <div class="col-2 flex justify-end">
+          <div class="col-2 flex justify-center md:justify-end">
             <img class="mb-4 h-72" src="./images/pchp-doatzo.png">
           </div>
         </div>
@@ -98,39 +98,41 @@
       <!-- TODO: EREBUS -->
     </main>
 
-    <footer class="bg-[#fff6d9] min-w-full mt-12 pb-4 text-[#0b1715]">
-      <div class="max-w-screen-lg mx-auto py-2 flex flex-col">
-        <div class="mailchimp-signup self-center">
+    <footer class="bg-[#fff6d9] w-full mt-12 pb-4 text-[#0b1715]">
+      <div class="md:max-w-screen-lg mx-auto py-2 flex flex-col">
+        <div class="mailchimp-signup flex justify-center px-2">
           <!-- Begin Mailchimp Signup Form -->
           <div id="mc_embed_signup">
             <form action="https://gmail.us9.list-manage.com/subscribe/post?u=d098d9289a6dd86ccd69c5386&amp;id=58d170f741&amp;f_id=00b939e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 
-              <div id="mc_embed_signup_scroll" class="flex items-baseline gap-2 mt-4">
+              <div id="mc_embed_signup_scroll" class="flex flex-col md:flex-row items-baseline gap-2 mt-4">
 
-                <div>
+                <div class="mr-4">
                   <h4 class="text-2xl font-bold text-slate-900">Newsletter</h4>
                   <!-- <small class="baskerville text-xs">Only game updates</small> -->
                 </div>
 
-                <div class="mc-field-group ml-4">
-                  <label for="mce-EMAIL" class="baskerville font-medium mr-1 hidden">Email</label>
-                  <input type="email" value="" name="EMAIL" placeholder="Email" class="required email  baskerville px-2 pt-1 pb-0.5 text-sm border-0 border-b" id="mce-EMAIL" required>
-                  <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+                <div class="flex gap-2">
+                  <div class="mc-field-group">
+                    <label for="mce-EMAIL" class="baskerville font-medium mr-1 hidden">Email</label>
+                    <input type="email" value="" name="EMAIL" placeholder="Email" class="required email baskerville px-2 pt-1 pb-0.5 text-sm border-0 border-b" id="mce-EMAIL" required>
+                    <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+                  </div>
+
+                  <div hidden="true"><input type="hidden" name="tags" value="12771878"></div>
+
+                  <div id="mce-responses" class="clear foot">
+                    <div class="response" id="mce-error-response" style="display:none"></div>
+                    <div class="response" id="mce-success-response" style="display:none"></div>
+                  </div>
+
+                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                  <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                    <input type="text" name="b_d098d9289a6dd86ccd69c5386_58d170f741" tabindex="-1" value="">
+                  </div>
+
+                  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="cursor-pointer border rounded baskerville button text-sm px-4 py-1 bg-[#0b1715] text-white">
                 </div>
-
-                <div hidden="true"><input type="hidden" name="tags" value="12771878"></div>
-
-                <div id="mce-responses" class="clear foot">
-                  <div class="response" id="mce-error-response" style="display:none"></div>
-                  <div class="response" id="mce-success-response" style="display:none"></div>
-                </div>
-
-                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                  <input type="text" name="b_d098d9289a6dd86ccd69c5386_58d170f741" tabindex="-1" value="">
-                </div>
-
-                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="cursor-pointer border rounded baskerville button text-sm px-4 py-1 bg-[#0b1715] text-white">
               </div>
             </form>
           </div>
@@ -141,9 +143,8 @@
         </div>
 
         <!-- Social Links -->
-        <div class="flex items-baseline gap-8 self-center justify-self-auto mt-2">
-          <!-- <h4 class="text-2xl font-bold text-slate-900 inline">Links</h4> -->
-          <ul class="flex text-sm gap-8 w-full baskerville font-semibold">
+        <div class="gap-8 mt-2 px-12">
+          <ul class="flex flex-wrap justify-center text-sm gap-x-8 gap-y-4 w-full baskerville font-semibold">
             <li><a class="link" href="./presskit/index.html">Press Kit</a></li>
             <li><a class="link" href="https://store.steampowered.com/curator/44138548">Steam</a></li>
             <li><a class="link" href="https://twitter.com/vittoriagames">Twitter</a></li>
@@ -158,6 +159,4 @@
 
   <!-- Mailchimp Script -->
   <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-  <script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);
-  </script>
 </html>
