Update logo & add lighthouse

--- a/index.html
+++ b/index.html
@@ -15,12 +15,37 @@
 
   <body class="cormorant">
     <div class="flex justify-center flex-col items-center mb-8 px-2">
-      <h1><img src="./images/vittoria-logo.png" /></h1>
-      <h2 class="-mt-16 text-2xl">Games by Nick Francisci</h2>
+      <h1><img src="./images/without-fail-logo.png" /></h1>
+      <h2 class="-mt-6 text-2xl">Games by Nick Francisci</h2>
     </div>
 
     <main class="mt-12 max-w-screen-lg px-2 mx-auto">
       <hr class="border-t-2" />
+        <section class="border-t-2 mt-2 pt-2 mb-8 px-1 md:px-3 md:mx-0">
+        <div class="flex justify-between border-white gap-4 items-start text-white">
+          <h2 class="text-4xl">LIGHTHOUSE</h2>
+          <span class="text-sm text-right">CURRENT WORK</span>
+        </div>
+
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-6 font-light text-sm baskerville" >
+          <div class="col-1">
+            <h3 class="text-xl mt-2 mb-3 text-slate-200">A cozy seaside story</h3>
+
+            <p class="mt-2" >I stand by the shore as ships come and go...</p>
+
+            <ul class="mt-6 text-white">
+              <!-- <li><a class="text-lg mt-4 link" href="https://store.steampowered.com/app/2368530/Forum_Mortuorum/">On Steam</a><li> -->
+              <!-- <li><a class="text-lg mt-4 link" href="./presskit/forum-mortuorum/index.html">Press Kit</a></li> -->
+            </ul>
+          </div>
+
+          <div class="col-2">
+            <img src="./images/lighthouse_coze.gif">
+            <!-- <img src="./images/fm-schola.gif"> -->
+          </div>
+        </div>
+      </section>
+
       <section class="border-t-2 mt-2 pt-2 mb-8 px-1 md:px-3 md:mx-0">
         <div class="flex justify-between border-white gap-4 items-start text-white">
           <h2 class="text-4xl">FORUM MORTUORUM</h2>
