--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Vittoria Games</title>
+    <title>Without Fail</title>
 
     <!-- TODO: INCLUDE FAVICON -->
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
@@ -29,9 +29,9 @@
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 font-light text-sm baskerville" >
           <div class="col-1">
-            <h3 class="text-xl mt-2 mb-3 text-slate-200">A cozy seaside story</h3>
+            <h3 class="text-xl mt-2 mb-3 text-slate-200">a cozy seaside story</h3>
 
-            <p class="mt-2" >I stand by the shore as ships come and go...</p>
+            <p class="mt-2" >i stand by the shore as ships come and go...</p>
 
             <ul class="mt-6 text-white">
               <!-- <li><a class="text-lg mt-4 link" href="https://store.steampowered.com/app/2368530/Forum_Mortuorum/">On Steam</a><li> -->
