--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="border-t-2 mt-2 pt-2 mb-8 px-1 md:px-3 md:mx-0">
         <div class="flex justify-between border-white gap-4 items-start text-white">
           <h2 class="text-4xl">LIGHTHOUSE</h2>
-          <span class="text-sm text-right">CURRENT WORK</span>
+          <span class="text-sm text-right">CURRENT PROTOTYPE</span>
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 font-light text-sm baskerville" >
