--- a/forum-mortuorum.html
+++ b/forum-mortuorum.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Without Fail</title>
+    <title>Forum Mortuorum | Gladiator Management</title>
 
     <!-- TODO: INCLUDE FAVICON -->
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
@@ -32,24 +32,25 @@
   </head>
 
   <body class="cormorant">
-    <div class="flex justify-center flex-col items-center mb-8 px-2">
-      <h1><img src="./images/without-fail-logo.png" /></h1>
-      <h2 class="-mt-6 text-2xl">Games by Nick Francisci</h2>
+    <div class="flex justify-center flex-col items-center px-2">
+      <h1><img src="./images/fm-logo.png" alt="The words 'Forum Mortuorum' in a Romanesque font" /></h1>
+      <iframe src="https://store.steampowered.com/widget/2368530/" frameborder="0" width="646" height="190"></iframe>
+      <!-- <h2 class="-mt-6 text-2xl">Gladiator Managment</h2> -->
     </div>
 
-    <main class="mt-12 max-w-screen-lg px-2 mx-auto">
+    <main class="-mt-4 max-w-screen-xl px-2 mx-auto">
       <hr class="border-t-2" />
         <section class="border-t-2 mt-2 pt-2 mb-8 px-1 md:px-3 md:mx-0">
         <div class="flex justify-between border-white gap-4 items-start text-white">
-          <h2 class="text-4xl">LIGHTHOUSE</h2>
-          <span class="text-sm text-right">CURRENT PROTOTYPE</span>
+          <h2 class="text-4xl">Assemble your Team</h2>
+          <!-- <span class="text-sm text-right">CURRENT PROTOTYPE</span> -->
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 font-light text-sm baskerville" >
           <div class="col-1">
-            <h3 class="text-xl mt-2 mb-3 text-slate-200">a cozy seaside story</h3>
+            <!-- <h3 class="text-xl mt-2 mb-3 text-slate-200">a cozy seaside story</h3> -->
 
-            <p class="mt-2" >i stand by the shore as ships come and go...</p>
+            <p class="mt-2"></p>
 
             <ul class="mt-6 text-white">
               <!-- <li><a class="text-lg mt-4 link" href="https://store.steampowered.com/app/2368530/Forum_Mortuorum/">On Steam</a><li> -->
@@ -66,12 +67,17 @@
 
       <section class="border-t-2 mt-2 pt-2 mb-8 px-1 md:px-3 md:mx-0">
         <div class="flex justify-between border-white gap-4 items-start text-white">
-          <h2 class="text-4xl">FORUM MORTUORUM</h2>
-          <span class="text-sm text-right">CURRENT WORK</span>
+          <h2 class="text-4xl text-right">FORUM MORTUORUM</h2>
+          <!-- <span class="text-sm text-right">CURRENT WORK</span> -->
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 font-light text-sm baskerville" >
           <div class="col-1">
+            <img class="mb-4" src="./images/fm-combat.gif">
+            <img src="./images/fm-schola.gif">
+          </div>
+
+          <div class="col-2">
             <h3 class="text-xl mt-2 mb-3 text-slate-200">Gladiator Management</h3>
 
             <p class="mt-2" >Your gladiator school awaits you. Decide whom to hire and whom to fight. Equip and train your gladiators. Set your tactics and throw your team into the arena for fame and profit. Advance through the leagues, conquer great foes, and emblazon your name upon history.</p>
@@ -80,11 +86,6 @@
               <li><a class="text-lg mt-4 link" href="https://store.steampowered.com/app/2368530/Forum_Mortuorum/">On Steam</a><li>
               <li><a class="text-lg mt-4 link" href="./presskit/forum-mortuorum/index.html">Press Kit</a></li>
             </ul>
-          </div>
-
-          <div class="col-2">
-            <img class="mb-4" src="./images/fm-combat.gif">
-            <img src="./images/fm-schola.gif">
           </div>
         </div>
       </section>
