Set up landing page basic content flow

--- a/forum-mortuorum.html
+++ b/forum-mortuorum.html
@@ -34,23 +34,23 @@
   <body class="cormorant">
     <div class="flex justify-center flex-col items-center px-2">
       <h1><img src="./images/fm-logo.png" alt="The words 'Forum Mortuorum' in a Romanesque font" /></h1>
-      <iframe src="https://store.steampowered.com/widget/2368530/" frameborder="0" width="646" height="190"></iframe>
+      <iframe src="https://store.steampowered.com/widget/2368530/" frameborder="0" class="w-full min-h-[190px] max-w-[800px] md:-mt-16"></iframe>
       <!-- <h2 class="-mt-6 text-2xl">Gladiator Managment</h2> -->
     </div>
 
-    <main class="-mt-4 max-w-screen-xl px-2 mx-auto">
+    <main class="mt-4 max-w-screen-xl px-2 mx-auto">
       <hr class="border-t-2" />
         <section class="border-t-2 mt-2 pt-2 mb-8 px-1 md:px-3 md:mx-0">
         <div class="flex justify-between border-white gap-4 items-start text-white">
-          <h2 class="text-4xl">Assemble your Team</h2>
           <!-- <span class="text-sm text-right">CURRENT PROTOTYPE</span> -->
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 font-light text-sm baskerville" >
           <div class="col-1">
+            <h2 class="text-4xl cormorant">MANAGE YOUR SCHOLA</h2>
             <!-- <h3 class="text-xl mt-2 mb-3 text-slate-200">a cozy seaside story</h3> -->
 
-            <p class="mt-2"></p>
+            <p class="mt-2" >Your gladiator school awaits you. Decide whom to hire and whom to fight. Equip and train your gladiators. Set your tactics and throw your team into the arena for fame and profit. Advance through the leagues, conquer great foes, and emblazon your name upon history.</p>
 
             <ul class="mt-6 text-white">
               <!-- <li><a class="text-lg mt-4 link" href="https://store.steampowered.com/app/2368530/Forum_Mortuorum/">On Steam</a><li> -->
@@ -59,7 +59,7 @@
           </div>
 
           <div class="col-2">
-            <img src="./images/lighthouse_coze.gif">
+            <img src="./images/fm-schola.gif">
             <!-- <img src="./images/fm-schola.gif"> -->
           </div>
         </div>
@@ -67,49 +67,48 @@
 
       <section class="border-t-2 mt-2 pt-2 mb-8 px-1 md:px-3 md:mx-0">
         <div class="flex justify-between border-white gap-4 items-start text-white">
-          <h2 class="text-4xl text-right">FORUM MORTUORUM</h2>
           <!-- <span class="text-sm text-right">CURRENT WORK</span> -->
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 font-light text-sm baskerville" >
           <div class="col-1">
             <img class="mb-4" src="./images/fm-combat.gif">
-            <img src="./images/fm-schola.gif">
+
           </div>
 
           <div class="col-2">
-            <h3 class="text-xl mt-2 mb-3 text-slate-200">Gladiator Management</h3>
+            <h2 class="text-4xl cormorant">FIGHT IN THE ARENA</h2>
+            <!-- <h3 class="text-xl mt-2 mb-3 text-slate-200">Run your Gladiator School</h3> -->
 
-            <p class="mt-2" >Your gladiator school awaits you. Decide whom to hire and whom to fight. Equip and train your gladiators. Set your tactics and throw your team into the arena for fame and profit. Advance through the leagues, conquer great foes, and emblazon your name upon history.</p>
 
-            <ul class="mt-6 text-white">
+<!--             <ul class="mt-6 text-white">
               <li><a class="text-lg mt-4 link" href="https://store.steampowered.com/app/2368530/Forum_Mortuorum/">On Steam</a><li>
               <li><a class="text-lg mt-4 link" href="./presskit/forum-mortuorum/index.html">Press Kit</a></li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </section>
 
       <section class="border-t-2 mt-2 pt-2 mb-8 px-1 md:px-3 md:mx-0">
         <div class="flex justify-between border-white gap-4 items-start text-white">
-          <h2 class="text-4xl">APOLLO</h2>
-          <span class="text-sm text-right">PROTOTYPE / ON HOLD</span>
+          <!-- <span class="text-sm text-right">PROTOTYPE / ON HOLD</span> -->
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 font-light text-sm baskerville" >
           <div class="col-1">
-            <h3 class="text-xl mt-2 mb-3 text-slate-200">Co-op Dieselpunk Airship Command</h3>
+            <h2 class="text-4xl cormorant">TRAVEL THE WORLD</h2>
+<!--             <h3 class="text-xl mt-2 mb-3 text-slate-200">Co-op Dieselpunk Airship Command</h3>
 
             <p class="mt-2">Step into the role of specialized officers aboard an aerial warship in an alternate 1960s. As freedom fighters in your occupied homeland, crew a privateer, opportunistically targeting enemy warships at your discretion. Plot the hunt, chase your quarry and engage it in blazing real-time combat.</p>
 
             <ul class="mt-6 text-white">
               <li><a class="text-lg mt-4 link" href="https://www.youtube.com/watch?v=_cd3CLoxES8">Prototype Gameplay Footage</a><li>
-            </ul>
+            </ul> -->
           </div>
 
           <div class="col-2">
-            <img class="mb-4" src="./images/apollo-thrusters.png">
-            <img src="./images/apollo-hits.png">
+            <img class="mb-4" src="./images/fm-map.png">
+            <!-- <img src="./images/apollo-hits.png"> -->
             <!-- <img src="./images/apollo-sketch.jpg"> -->
           </div>
         </div>
@@ -118,84 +117,53 @@
       <!-- TODO: PORKCHOPOLIS -->
       <section class="border-t-2 mt-2 pt-2 mb-8 px-1 md:px-3 md:mx-0">
         <div class="flex justify-between border-white gap-4 items-start text-white">
-          <h2 class="text-4xl">PORKCHOPOLIS</h2>
-          <span class="text-sm text-right">PROTOTYPE / ON HOLD</span>
+          <!-- <span class="text-sm text-right">In Development</span> -->
         </div>
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 font-light text-sm baskerville" >
           <div class="col-1">
-            <h3 class="text-xl mt-2 mb-3 text-slate-200">Co-op Steppe City-Builder</h3>
-            <p class="mt-2">Cooperate with your friends to rule a budding city-state on the periphery of the Steppe. Split governance among yourselves as a foreign-minister, city-planner, and economic minister, each with unique and complementary abilities. Also, all your subjects are goats!</p>
-
-            <ul class="mt-6 text-white">
-              <li><a class="text-lg mt-4 link" href="https://www.youtube.com/watch?v=LzQ7F02TOCI&list=PLav9fuRfyF8APMDiPuyRviUD1lkBpY56U&index=6">Early Feature Demos</a><li>
-            </ul>
+            <img class="mb-4" src="./images/fm-helena-cropped.png">
           </div>
 
-          <div class="col-2 flex justify-center md:justify-end">
-            <img class="mb-4 h-72" src="./images/pchp-doatzo.png">
+          <div class="col-2">
+            <h2 class="text-4xl cormorant">MEET INTERESTING ROMANS</h2>
+<!--             <h3 class="text-xl mt-2 mb-3 text-slate-200">Co-op Steppe City-Builder</h3>
+            <p class="mt-2">Cooperate with your friends to rule a budding city-state on the periphery of the Steppe. Split governance among yourselves as a foreign-minister, city-planner, and economic minister, each with unique and complementary abilities. Also, all your subjects are goats!</p> -->
           </div>
         </div>
       </section>
 
-      <!-- TODO: MECH-ANIC -->
-      <!-- TODO: EREBUS -->
+
+        <section class="border-t-2 border-b-2 mt-2 pt-2 px-1 md:px-3 md:mx-0">
+          <h2 class="text-6xl text-center w-full cormorant mb-3">AND MUCH MORE...</h2>
+          <img class="mb-4" src="./images/fm-roadmap.png">
+      </section>
+
+      <hr class="border-t-2 mt-2" />
+
+      <div class="flex justify-center flex-col items-center px-2 mt-4 mb-6">
+          <h2 class="text-6xl text-center w-full cormorant mb-1">WISHLIST NOW!</h2>
+          <p class="text-lg text-center">Seriously. It really helps us</p>
+        <iframe src="https://store.steampowered.com/widget/2368530/" frameborder="0" class="w-full mt-4 min-h-[190px] max-w-[800px]"></iframe>
+      </div>
+
+
+
     </main>
 
-    <footer class="bg-[#fff6d9] w-full mt-12 pb-4 text-[#0b1715]">
-      <div class="md:max-w-screen-lg mx-auto py-2 flex flex-col">
-        <div class="mailchimp-signup flex justify-center px-2">
-          <!-- Begin Mailchimp Signup Form -->
-          <div id="mc_embed_signup">
-            <form action="https://gmail.us9.list-manage.com/subscribe/post?u=d098d9289a6dd86ccd69c5386&amp;id=58d170f741&amp;f_id=00b939e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-
-              <div id="mc_embed_signup_scroll" class="flex flex-col md:flex-row items-baseline gap-2 mt-4">
-
-                <div class="mr-4">
-                  <h4 class="text-2xl font-bold text-slate-900">Newsletter</h4>
-                  <!-- <small class="baskerville text-xs">Only game updates</small> -->
-                </div>
-
-                <div class="flex gap-2">
-                  <div class="mc-field-group">
-                    <label for="mce-EMAIL" class="baskerville font-medium mr-1 hidden">Email</label>
-                    <input type="email" value="" name="EMAIL" placeholder="Email" class="required email baskerville px-2 pt-1 pb-0.5 text-sm border-0 border-b" id="mce-EMAIL" required>
-                    <span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
-                  </div>
-
-                  <div hidden="true"><input type="hidden" name="tags" value="12771878"></div>
-
-                  <div id="mce-responses" class="clear foot">
-                    <div class="response" id="mce-error-response" style="display:none"></div>
-                    <div class="response" id="mce-success-response" style="display:none"></div>
-                  </div>
-
-                  <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                  <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                    <input type="text" name="b_d098d9289a6dd86ccd69c5386_58d170f741" tabindex="-1" value="">
-                  </div>
-
-                  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="cursor-pointer border rounded baskerville button text-sm px-4 py-1 bg-[#0b1715] text-white">
-                </div>
-              </div>
-            </form>
-          </div>
-
-          <!--End Mailchimp signup form-->
-
-          <!-- TODO: Mailing List, Press kit, Steam, Twitter, Copyright -->
+    <footer class="bg-[#fff6d9] w-full mt-12 pb-2 text-[#0b1715]">
+      <div class="md:max-w-screen-lg mx-auto pt-4 flex flex-col items-center">
+        <div class="w-full flex">
+          <p class="text-sm w-full baskerville mb-3 mt-2 text-center">A proud production of WITHOUT FAIL, a tiny indie studio. Check out our other game concepts at <a class="link" href="https://vittoriagames.com/">withoutfail.games</a>
         </div>
-
         <!-- Social Links -->
         <div class="gap-8 mt-2 px-12">
           <ul class="flex flex-wrap justify-center text-sm gap-x-8 gap-y-4 w-full baskerville font-semibold">
-            <li><a class="link" href="./presskit/index.html">Press Kit</a></li>
-            <li><a class="link" href="https://store.steampowered.com/curator/44138548">Steam</a></li>
-            <li><a class="link" href="https://twitter.com/vittoriagames">Twitter</a></li>
-            <li><a class="link" href="https://www.youtube.com/channel/UCLkS8mSATQ3ahVtB1ltNHgA">Youtube</a></li>
-            <li><a class="link" href="mailto:vittoriagamestudio@gmail.com">Contact</a></li>
+            <li><a class="link" href="./presskit/forum-mortuorum/index.html">Press Kit</a></li>
+            <li><a class="link" href="https://store.steampowered.com/app/2368530/Forum_Mortuorum/">Steam</a></li>
           </ul>
         </div>
+        <img src="./images/without-fail-logo-green.png" height="100" width="100" class="mt-2" />
       </div>
     </footer>
 
