Optimize some images to AVIF

--- a/forum-mortuorum.html
+++ b/forum-mortuorum.html
@@ -109,7 +109,7 @@
           </div>
 
           <div class="col-2">
-            <img class="mb-4" src="./images/fm-map.png">
+            <img class="mb-4" src="./images/fm-map.avif">
             <!-- <img src="./images/apollo-hits.png"> -->
             <!-- <img src="./images/apollo-sketch.jpg"> -->
           </div>
@@ -124,7 +124,7 @@
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6 font-light text-sm baskerville" >
           <div class="col-1">
-            <img class="mb-4" src="./images/fm-helena-cropped.png">
+            <img class="mb-4" src="./images/fm-helena-cropped.avif">
           </div>
 
           <div class="col-2">
@@ -141,7 +141,7 @@
         <section class="border-t-2 border-b-2 mt-2 pt-2 px-1 md:px-3 md:mx-0">
           <h2 class="text-6xl text-center w-full cormorant mb-3">AND MUCH MORE...</h2>
           <p class="mt-2 mb-3 baskerville">We have bold ambitions and will not have completed our work until Forum becomes the gladiator management game <i>nec plus ultra</i>: with no equal.</p>
-          <img class="mb-4" src="./images/fm-roadmap.png">
+          <img class="mb-4" src="./images/fm-roadmap.avif">
       </section>
 
       <hr class="border-t-2 mt-2" />
